# fable_village

./: .gitignore  Cargo.toml
assets/textures/backgrounds/: bg001.ron
config/: bindings.ron  display.ron
csv/: texts.csv
master_data/: Cargo.toml
master_data/master_data_derive/: Cargo.toml
master_data/master_data_derive/src/: lib.rs
master_data/src/: lib.rs
src/: main.rs
src/bundles/: mod.rs
src/bundles/text_bundle/: bundle.rs  mod.rs
src/bundles/text_bundle/components/: mod.rs  text.rs
src/bundles/text_bundle/systems/: mod.rs  text_render_system.rs
src/bundles/touch_input_bundle/: bundle.rs  mod.rs
src/bundles/touch_input_bundle/components/: mod.rs  mouse_simulated_touch.rs  touch.rs  touchable.rs
src/bundles/touch_input_bundle/resources/: mod.rs  mouse_position.rs
src/bundles/touch_input_bundle/systems/: mod.rs  mouse_as_touch_system.rs  touch_input_debug_system.rs  touch_input_system.rs  touchable_system.rs
src/components/: plane.rs
src/events/: game_state_event.rs  mod.rs
src/extensions/: camera.rs
src/loaders/: mod.rs  sprite_cache.rs  sprite_loader.rs  texture_loader.rs
src/states/: loading_state.rs  main_menu_state.rs  mod.rs
src/systems/: button_dispatch_system.rs  global_hotkey_system.rs  mod.rs
