[package]
name = "fable_village"
version = "0.1.0"
authors = ["Robert Jan Zwetsloot <jan.zwetsloot@adglobe.co.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.amethyst]
version = "0.15"
features = ["vulkan"]

[dependencies]
amethyst_master_data = { path = "master_data" }
serde = { version = "1.0", features = ["derive"] }
csv = "1.1"
