[package]
name = "amethyst_master_data_derive"
version = "0.1.0"
authors = ["Robert Jan Zwetsloot <jan.zwetsloot@adglobe.co.jp>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
convert_case = "0.4.0"
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }
